2002-01-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/functions.c (expand):
	fixed core dump when using something like $[$v] in a command

2002-01-17  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/update.c (flush_window_updates):
	fixed unnecessary window style updates

	* fvwm/style.c (parse_and_set_window_style):
	* fvwm/add_window.c (RestoreWithdrawnLocation):
	(AddWindow):
	(setup_frame_attributes):
	* fvwm/fvwm.h (FvwmWindow):
	Fvwm does no longer disable backing store on all of its windows. This
	cause too many problems with some applications, e.g. rdist.  Introduced
	the new style BackingStoreWindowDefault that tells fvwm not to modify
	the backing store attribute on the client window - which now is the
	default.

2002-01-16  Dominik Vogt  <dominik.vogt@gmx.de>

	* configure.in:
	fixed building with libstroke-0.5.1 on Solaris8

	* fvwm/icons.c (GetIconBitmap):
	(GetIconWindow):
	Ignore client icons that have the wrong depth

2002-01-10  olicha  <olivier.chapuis@free.fr>

	* NEWS:
	NEWS update for my previous commit

2002-01-10  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/events.c (HandleExpose):
	eat up expose events even if the server claims that the expose count is
	zero; fixes a problem with many redraws of windows that are uncovered
	by shading a window above them

2002-01-09  olicha  <olivier.chapuis@free.fr>

	* fvwm/style.c (CMD_Style):
	free all the elements of the ptmpstyle before freeing it

2002-01-09  Dominik Vogt  <dominik.vogt@gmx.de>

	* fvwm/style.c (merge_styles):
	fixed core dump w/ multiple use of the UseStyle style and HilightBack
	in the copied style

2002-01-01  Dominik Vogt  <dominik.vogt@gmx.de>

	* libs/defaults.h:
	* fvwm/misc.c (GrabEm):
	reduced number of grab attempts from 500 to 50 @ 10 ms = 0.5 seconds */

	* fvwm/events.c (HandleUnmapNotify):
	(HandleMapRequestKeepRaised):
	(check_map_request):
	fixed unmanaged window when window was mapped/unmapped/mapped too fast

	* fvwm/add_window.c (FetchWmProtocols):