@@ -1557,15 +1557,21 @@ static void MenuInteraction(
 	      {
 		flags.do_popdown_now = True;
 		do_fake_motion = True;
-		if (!MST_DO_POPUP_IMMEDIATELY(pmp->menu) &&
-		    !MST_DO_POPDOWN_IMMEDIATELY(pmp->menu) &&
-		    MST_POPUP_DELAY(pmp->menu) <= MST_POPDOWN_DELAY(pmp->menu)
-		    && popup_delay_10ms == popdown_delay_10ms)
+                if (MST_DO_POPUP_IMMEDIATELY(pmp->menu))
+                {
+		  flags.do_popup_now = True;
+		  flags.is_popped_up_by_timeout = True;
+                }
+		else if (!MST_DO_POPUP_IMMEDIATELY(pmp->menu) &&
+                         flags.is_pointer_in_active_item_area)
 		{
 		  flags.do_popup_now = True;
 		  flags.is_popped_up_by_timeout = True;
 		}
-		if (flags.is_pointer_in_active_item_area)
+		else if (!MST_DO_POPUP_IMMEDIATELY(pmp->menu) &&
+		    !MST_DO_POPDOWN_IMMEDIATELY(pmp->menu) &&
+		    MST_POPUP_DELAY(pmp->menu) <= MST_POPDOWN_DELAY(pmp->menu)
+		    && popup_delay_10ms == popdown_delay_10ms)
 		{
 		  flags.do_popup_now = True;
 		  flags.is_popped_up_by_timeout = True;
