@@ -1,3 +1,8 @@
+2002-01-23  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* fvwm/menus.c (MenuInteraction):
+	small bug fixes
+
 2002-01-17  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* fvwm/functions.c (expand):
